# Fractal-Protocol

./: .gitignore  Dockerfile  README.md  compose.yaml  fractal protocol prd.txt  netlify.toml  package-lock.json  package.json  render.yaml  run.bash
backend/: .env.example  README.md  package-lock.json  package.json  seed.js  server.js  tsconfig.json
contracts/: Cargo.toml
contracts/factory/: Cargo.toml
contracts/factory-service/: Cargo.toml
contracts/factory-service/src/: lib.rs
contracts/factory/src/: lib.rs
contracts/hello/: Cargo.toml
contracts/hello-service/: Cargo.toml
contracts/hello-service/src/: lib.rs
contracts/hello/src/: lib.rs
contracts/market/: Cargo.toml
contracts/market-service/: Cargo.toml
contracts/market-service/src/: lib.rs
contracts/market/src/: lib.rs
contracts/spawn-handler/: Cargo.toml
contracts/spawn-handler/src/: lib.rs
docs/: docker-setup.md  linera-setup.md  render-backend.md
frontend/: .env.example  DEPLOYMENT.md  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: CreateMarketModal.tsx  FeaturesSection.tsx  Header.tsx  HeroSection.tsx  HowItWorksSection.tsx  LandingFooter.tsx  LandingHeader.tsx  MarketCard.tsx  MarketList.tsx  MarketTreeVisualization.tsx  PlaceBetModal.tsx  WalletConnect.tsx  WalletConnection.tsx  index.ts
frontend/src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx
frontend/src/config/: api.ts  wagmi.ts
frontend/src/hooks/: index.ts  useMarkets.ts  useWallet.ts
frontend/src/pages/: CreateMarket.tsx  ExploreMarkets.tsx
frontend/src/types/: index.ts
frontend/src/utils/: index.ts
