[workspace]
members = [
    "market",
    "factory", 
    "spawn-handler",
    "hello",
    "hello-service",
    "market-service",
    "factory-service"
]
resolver = "2"

[workspace.dependencies]
linera-sdk = { version = "0.15", default-features = false }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
async-graphql = "6.0.11"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Fractal Protocol Team"]
license = "MIT"
repository = "https://github.com/Fmsticks2/Fractal-Protocol"
