[package]
name = "hello-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
linera-sdk.workspace = true
serde.workspace = true
async-graphql = "6"
hello-contract = { path = "../hello" }

[lib]
crate-type = ["cdylib"]