[package]
name = "hello-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
linera-sdk.workspace = true
serde.workspace = true
async-graphql = "6.0.11"
hello-contract = { path = "../hello" }
linera-views = "0.15"

[lib]
crate-type = ["cdylib"]