[package]
name = "hello-contract"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
linera-sdk.workspace = true
serde.workspace = true
thiserror.workspace = true
async-trait.workspace = true
async-graphql = "6"

[lib]
crate-type = ["cdylib"]