[package]
name = "market-contract"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
linera-sdk.workspace = true
serde.workspace = true
thiserror.workspace = true
async-trait.workspace = true
linera-views = "0.15"

[lib]
crate-type = ["cdylib"]